Makefile rework (macOS on M1, homebrew in /opt/homebrew etc)

--- a/default.env
+++ b/default.env
@@ -1,6 +1,6 @@
 # MCU programmer parameters
 export ISP_MCU="m32u4"
-export ISP_PORT="/dev/arduboy" # via /etc/udev/rules.d
+export ISP_PORT="/dev/ttyACM0"
 export ISP_PROGRAMMER="avr109"
 
 # compile target settings
